Added @angular/material, first sample page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,8 @@
   </mat-menu>
 </mat-toolbar>
 
-<mat-selection-list #projects [multiple]="false">
-  <mat-list-option value="hello">world</mat-list-option>
-</mat-selection-list>
+<mat-spinner></mat-spinner>
+<h1>Work in Progress</h1>
+<!--<mat-selection-list #projects [multiple]="false">-->
+<!--  <mat-list-option value="hello">world</mat-list-option>-->
+<!--</mat-selection-list>-->
